arrumando o menu da parte de cima do mobile na Geral

--- a/Bsk.Solution/Bsk.Site/Geral/assets/css/sobre.css
+++ b/Bsk.Solution/Bsk.Site/Geral/assets/css/sobre.css
@@ -228,6 +228,11 @@
     background-size: cover;
   }
 }
+@media (max-width:780px) {
+    #nav.active ul {
+        height: auto !important;
+    }
+}
 
 .titulo_sec {
   padding-left: 50px;
