arrumando o menu da parte de cima

--- a/Bsk.Solution/Bsk.Site/Geral/assets/css/style.css
+++ b/Bsk.Solution/Bsk.Site/Geral/assets/css/style.css
@@ -497,11 +497,18 @@ footer > div a:hover {
     visibility: visible;
     overflow-y: auto;
   }
-    @media (max-width:780px) {
-        #nav.active ul {
-            height: auto !important;
-        }
-    }
+  @media (max-width:780px) {
+      #nav.active ul {
+          height: auto !important;
+      }
+      .logo {
+          margin: 15px;
+      }
+      #btn-mobile {
+          display: flex;
+          padding: 0px;
+      }
+  }
   #nav .menu-itens li a {
     padding: 1rem;
     transition: 0.3s;
