--- a/Bsk.Solution/Bsk.Site/Geral/assets/css/style.css
+++ b/Bsk.Solution/Bsk.Site/Geral/assets/css/style.css
@@ -142,7 +142,7 @@ header {
 }
 
 .menu-topo {
-  display: grid;
+  display: flex;
   height: 120px;
   grid-template-columns: 1fr 2fr;
   align-items: center;
@@ -191,6 +191,23 @@ header {
 .btn-cadastro:hover {
   background: #f08f00;
   color: #770e18 !important;
+}
+.btn-cadastro-mobile {
+    border: #f6af33 solid 1px;
+    background: transparent;
+    outline: none;
+    height: 38px;
+    padding: 9px 13px;
+    color: #fff;
+    font-weight: bold;
+    letter-spacing: 0.1em;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+.btn-cadastro-mobile:hover {
+    background: #f08f00;
+    color: #770e18 !important;
 }
 .minhaclasse2 {
     color: darkred;
@@ -484,7 +501,7 @@ footer > div a:hover {
     display: block;
     position: absolute;
     width: 100% !important;
-    top: 120px;
+    top: 170px;
     right: 0;
     background: #770e18;
     z-index: 100;
@@ -497,18 +514,7 @@ footer > div a:hover {
     visibility: visible;
     overflow-y: auto;
   }
-  @media (max-width:780px) {
-      #nav.active ul {
-          height: auto !important;
-      }
-      .logo {
-          margin: 15px;
-      }
-      #btn-mobile {
-          display: flex;
-          padding: 0px;
-      }
-  }
+  
   #nav .menu-itens li a {
     padding: 1rem;
     transition: 0.3s;
@@ -535,6 +541,64 @@ footer > div a:hover {
   }
 
   /* ****************************** */
+}
+@media (max-width:780px) {
+    #nav.active ul {
+        height: auto !important;
+        width: auto !important;
+    }
+    .conteiner-mobile {
+        width: 100%;
+        display: flex;
+        flex-direction: row-reverse;
+        padding: 20px 0 15px 0;
+        margin: 0px 5px;
+    }
+
+    .logo {
+        width: 140px !important;
+        margin: 10px 150px 0 0;
+    }
+
+    #btn-mobile {
+        display: flex;
+        padding: 0px;
+    }
+    .menu {
+        justify-content: space-between;
+        align-items: center;
+        padding: 0px !important;
+    }
+
+    .menu ul {
+        display: block;
+        position: absolute;
+        width: 100% !important;
+        top: 120px !important;
+        right: 150px !important;
+        background: #770e18;
+        z-index: 100;
+        transition: 0.3s !important;
+        visibility: hidden;
+        overflow-y: hidden;
+    }
+
+    .menu-itens li {
+        padding: 1rem 0;
+        margin: 10px !important;
+        border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+    }
+
+    .menu-topo.container {
+        display: flex;
+        flex-wrap: wrap;
+        height: auto;
+        margin: 0px 5px;
+    }
+
+    header {
+        height: 120px !important;
+    }
 }
 /* responsivo */
 @media only screen and (min-width: 900px) and (max-width: 1150px) {
@@ -702,6 +766,9 @@ footer > div a:hover {
   }
   .btn-cadastro {
     font-size: 12px;
+  }
+  .btn-cadastro {
+      font-size: 12px;
   }
   .titulo {
     font-size: 32px;
