--- a/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/style.css
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/style.css
@@ -791,3 +791,21 @@ footer > div a:hover {
     display: none !important; 
   }
 }
+@media (max-width: 768px) {
+    div#tabela_filter {
+        /* position: relative; */
+        display: flex;
+        /* right: 0; */
+        /* margin-top: 30px; */
+        margin-left: 20px;
+        margin-bottom: 40px;
+    }
+    div#tabela_filter::before {
+        content: '🔍︎';
+        z-index: 400;
+        position: absolute;
+        top: 60px;
+        display:flex;
+        /* display: block; */
+    }
+}
