arruamndo dados da tabela finalizado

--- a/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/Master/layout.Master
@@ -27,15 +27,15 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
 
+    <!-- jQuery (Atualizado para versão mais recente) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Bootstrap JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    
     <!-- Outros scripts -->
-
     <script src="js/jquery.mask.js"></script>
-    <script src="js/datatables.min.js"></script>
+    <script src="js/datatables.min.js"></script> <!-- DataTables -->
     <script src="js/sweetalert2.all.min.js"></script>
     <script src="js/rating.js"></script>
     <script src="js/wow.js"></script>
@@ -45,9 +45,9 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.3/html5shiv.js"></script>
-            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.3/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
 <style>
 .voltar.btn {
