--- a/Bsk.Solution/Bsk.Site/Geral/assets/css/cadastros.css
+++ b/Bsk.Solution/Bsk.Site/Geral/assets/css/cadastros.css
@@ -103,7 +103,7 @@
         display: flex;
         flex-direction: column;
         float: left;
-        
+        height: 110px;
         padding:5px;
     }
 
@@ -112,6 +112,16 @@
         border-bottom: #770e18 1px solid;
         margin-bottom: 10px;
     }
+
+    .radio-label {
+        font-family: inherit; /* Use the same font as the rest of the page */
+        font-size: inherit; /* Use the same font size as the rest of the page */
+        line-height: inherit; /* Use the same line height as the rest of the page */
+        margin-left: 5px; /* Adjust margin as needed */
+        display: flex;
+        align-items: center; /* Vertically align text with the center of the buttons */
+    }
+
 
     .campos > div input {
         height: 38px;
