arrumando problema datatable

--- a/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/dashboard.css
+++ b/Bsk.Solution/Bsk.Site/Fornecedor/assets/css/dashboard.css
@@ -1441,3 +1441,7 @@ label.subtitulo_card_1.subtitulo_1 {
 .cursor {
     cursor: pointer;
 }
+.dashboard {
+    display: flex !important;
+    flex-direction: column !important;
+}
