--- a/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
+++ b/Bsk.Solution/Bsk.Site/Cliente/Master/Layout.Master
@@ -154,6 +154,7 @@ div#tabela_filter input[type="search"] {
     box-shadow: 4px 4px 6px rgb(0 0 0 / 30%);
     padding: 15px 35px;
     color: #3c3c3b;
+    margin: 15px 15px 15px 23px;
     font-family: Rajdhani-semi, sans-serif;
     font-size: 16px;
 }
@@ -164,6 +165,7 @@ div#tabela_filter::before {
     position: absolute;
     top: 15px;
     display: block;
+    margin: 15px 15px 20px 23px;
     left: 10px;
 }
 
